--- a/main.tex
+++ b/main.tex
@@ -28,11 +28,20 @@
 \usepackage[vlined,linesnumbered,boxed]{algorithm2e}
 \usepackage{times}
 \usepackage{cleveref}
+\usepackage{bm}
 
 %%% Colors ====================================================================
 \definecolor{phdcol0}{RGB}{0,47,107}
 \definecolor{phdcol1}{RGB}{197,12,31}
 
+\definecolor{hgreen}{RGB}{0,153,20}%{rgb}{0, 0.8, 0.2}
+
+
+
+\newcommand{\cred}[1]{{\color{red}#1}}
+\newcommand{\cgreen}[1]{{\color{hgreen}#1}}
+\newcommand{\cblue}[1]{{\color{blue}#1}}
+\newcommand{\cprop}[1]{{\color{purple}#1}}
 %%% Tikz ======================================================================
 \usepackage{tikz}
 \usetikzlibrary{calc, chains, decorations.pathmorphing}
