--- a/fig/conflict.tex
+++ b/fig/conflict.tex
@@ -1,6 +1,6 @@
-{\scriptsize
-\newcommand{\ratioc}{0.195}
-%\begin{minipage}[l]{\ratioc\linewidth}
+%{\scriptsize
+%\newcommand{\ratioc}{0.195}
+%\begin{minipage}[b]{\ratioc\linewidth}
 %	\begin{itemize}
 %		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
 %		\item[] $\omega_2 = \{x_4, x_5, x_6\}$
@@ -10,56 +10,120 @@
 %		\item[] $\omega_6 = \{\neg x_3, \neg x_6\}$
 %	\end{itemize}
 %\end{minipage}
-\begin{minipage}[b]{\ratioc\linewidth}
-	\begin{itemize}
-	\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
-	\item[] $\omega_2 = \{x_4, x_5, \cred{x_6\}}$
-	\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
-	\item[] $\omega_4 = \{\neg x_2, \neg x_4\}$
-	\item[] $\omega_5 = \{\neg x_3, \neg x_4\}$
-	\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
-\end{itemize}
-\end{minipage}
-\begin{minipage}[b]{\ratioc\linewidth}
-		\begin{itemize}
-		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
-		\item[] $\omega_2 = \{\cprop{x_4}, \cred{x_5}, \cred{x_6\}}$
-		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
-		\item[] $\omega_4 = \{\neg x_2, \neg x_4\}$
-		\item[] $\omega_5 = \{\neg x_3, \neg x_4\}$
-		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
-	\end{itemize}
-\end{minipage}
-\begin{minipage}[b]{\ratioc\linewidth}
-			\begin{itemize}
-		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
-		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
-		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
-		\item[] $\omega_4 = \{\neg x_2, \cred{\neg x_4}\}$
-		\item[] $\omega_5 = \{\neg x_3, \cred{\neg x_4}\}$
-		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
-	\end{itemize}
-\end{minipage}
-\begin{minipage}[b]{\ratioc\linewidth}
-	\begin{itemize}
-		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
-		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
-		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
-		\item[] $\omega_4 = \{\neg x_2, \cred{\neg x_4}\}$
-		\item[] $\omega_5 = \{\neg x_3, \cred{\neg x_4}\}$
-		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
-	\end{itemize}
-\end{minipage}
-\begin{minipage}[b]{\ratioc\linewidth}
-	\begin{itemize}
-		\item[] $\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
-		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
-		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
-		\item[] $\cgreen{\omega_4} = \{\cgreen{\neg x_2}, \cred{\neg x_4}\}$
-		\item[] $\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
-		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%\begin{minipage}[b]{\ratioc\linewidth}
+%	\begin{itemize}
+%	\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+%	\item[] $\omega_2 = \{x_4, x_5, \cred{x_6\}}$
+%	\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+%	\item[] $\omega_4 = \{\neg x_2, \neg x_4\}$
+%	\item[] $\omega_5 = \{\neg x_3, \neg x_4\}$
+%	\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%\end{itemize}
+%\end{minipage}
+%\begin{minipage}[b]{\ratioc\linewidth}
+%		\begin{itemize}
+%		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+%		\item[] $\omega_2 = \{\cprop{x_4}, \cred{x_5}, \cred{x_6\}}$
+%		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+%		\item[] $\omega_4 = \{\neg x_2, \neg x_4\}$
+%		\item[] $\omega_5 = \{\neg x_3, \neg x_4\}$
+%		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%	\end{itemize}
+%\end{minipage}
+%\begin{minipage}[b]{\ratioc\linewidth}
+%			\begin{itemize}
+%		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+%		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+%		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+%		\item[] $\omega_4 = \{\cprop{\neg x_2}, \cred{\neg x_4}\}$
+%		\item[] $\omega_5 = \{\cprop{\neg x_3}, \cred{\neg x_4}\}$
+%		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%	\end{itemize}
+%\end{minipage}
+%%\begin{minipage}[b]{\ratioc\linewidth}
+%%	\begin{itemize}
+%%		\item[] $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+%%		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+%%		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+%%		\item[] $\omega_4 = \{\neg x_2, \cred{\neg x_4}\}$
+%%		\item[] $\omega_5 = \{\neg x_3, \cred{\neg x_4}\}$
+%%		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%%	\end{itemize}
+%%\end{minipage}
+%\begin{minipage}[b]{\ratioc\linewidth}
+%	\begin{itemize}
+%		\item[] $\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
+%		\item[] $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+%		\item[] $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+%		\item[] $\cgreen{\omega_4} = \{\cgreen{\neg x_2}, \cred{\neg x_4}\}$
+%		\item[] $\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
+%		\item[] $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+%
+%	\end{itemize}
+%\end{minipage}
+%}
+%
 
-	\end{itemize}
-\end{minipage}
-}
 
+\begin{tikzpicture}[level/.style={sibling distance=60mm/#1},every node/.style={scale=0.89}, scale=0.89]
+	\node[text width=2.75cm] (a) {
+		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		 $\omega_2 = \{x_4, x_5, x_6\}$
+         $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+	     $\omega_4 = \{\neg x_2, \neg x_4\}$
+	     $\omega_5 = \{\neg x_3, \neg x_4\}$
+		 $\omega_6 = \{\neg x_3, \neg x_6\}$
+	};
+	\node[] (al) at ($(a.south west) + (0, -0.5)$) {$\alpha$ = };
+	\node[] (aa) at ($(a.south) + (0, -0.5)$) {D $\neg x_1$};
+	
+	\node[text width=2.75cm] (b) at ($(a) + (3.5, 0)$) {
+		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		 $\omega_2 = \{x_4, x_5, \cred{x_6\}}$
+		 $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \neg x_5\}$
+		 $\omega_4 = \{\neg x_2, \neg x_4\}$
+		 $\omega_5 = \{\neg x_3, \neg x_4\}$
+		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+	\node[] (bb) at ($(b.south) + (0, -0.5)$) {D $\neg x_6$};
+	
+	\node[text width=2.75cm] (c) at ($(b) + (3.5, 0)$) {
+		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		 $\omega_2 = \{\cprop{x_4}, \cred{x_5}, \cred{x_6\}}$
+		 $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		 $\omega_4 = \{\neg x_2, \neg x_4\}$
+		 $\omega_5 = \{\neg x_3, \neg x_4\}$
+		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+	\node[] (cc) at ($(c.south) + (0, -0.5)$) {D $\neg x_5$};
+	
+	\node[text width=2.75cm] (d) at ($(c) + (3.5, 0)$) {
+		 $\omega_1 = \{\cred{x_1}, x_2, x_3\}$ 
+		 $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+		 $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		 $\omega_4 = \{\cprop{\neg x_2}, \cred{\neg x_4}\}$
+		 $\omega_5 = \{\cprop{\neg x_3}, \cred{\neg x_4}\}$
+		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+	\node[] (dd) at ($(d.south) + (0, -0.5)$) {P $x_4$};
+	
+	\node[text width=2.75cm] (e) at ($(d) + (3.5, 0)$) {
+		 $\omega_1 = \{\cred{x_1}, \cred{x_2}, \cblue{x_3}\}$ 
+ 		 $\cgreen{\omega_2} = \{\cgreen{x_4}, \cred{x_5}, \cred{x_6\}}$
+ 		 $\cgreen{\omega_3} = \{\cgreen{\neg x_1}, \cgreen{\neg x_5\}}$
+		 $\cgreen{\omega_4} = \{\cgreen{\neg x_2}, \cred{\neg x_4}\}$
+ 		 $\omega_5 = \{\cblue{\neg x_3}, \cred{\neg x_4}\}$
+		 $\cgreen{\omega_6} = \{\neg x_3, \cgreen{\neg x_6\}}$
+	};
+	\node[] (ee) at ($(e.south) + (0, -0.5)$) {P $\neg x_2$};
+	\node[] (conf) at ($(e.south east) + (0, -0.5)$) {C};
+
+
+
+	\draw[->, thick] (aa) to [bend right]  (bb);
+	\draw[->, thick] (bb) to [bend right]  (cc);
+	\draw[->, thick] (cc) to [bend right]  (dd);
+	\draw[->, thick] (dd) to [bend right]  (ee);
+	\draw[->, thick] (ee) to []  (conf);
+
+\end{tikzpicture}
