--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 \usepackage{times}
 \usepackage{cleveref}
 \usepackage{bm}
+\usepackage{pgfplots}
 
 %%% Colors ====================================================================
 \definecolor{phdcol0}{RGB}{0,47,107}
@@ -38,16 +39,18 @@
 
 
 
-\newcommand{\cred}[1]{{\color{red}#1}}
+\newcommand{\cred}[1]{{\color{purple}#1}}
 \newcommand{\cgreen}[1]{{\color{hgreen}#1}}
-\newcommand{\cblue}[1]{{\color{blue}#1}}
-\newcommand{\cprop}[1]{{\color{purple}#1}}
+\newcommand{\cblue}[1]{{\color{blue!80}#1}}
+\newcommand{\cprop}[1]{{\color{orange}#1}}
+
 %%% Tikz ======================================================================
 \usepackage{tikz}
 \usetikzlibrary{calc, chains, decorations.pathmorphing}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{arrows,shapes,positioning}
 \usetikzlibrary{calc,decorations.markings}
+\usetikzlibrary{decorations.text}
 
 %%% Listings ==================================================================
 \usepackage{listings}
