--- a/fig/implication_graph.tex
+++ b/fig/implication_graph.tex
@@ -6,7 +6,7 @@
 	
 	\node[decision] (dx1) {$\neg x_1$@1};
 	\node[decision] (dx6) at ($(dx1) + (0, -2)$) {$\neg x_6$@2};
-	\node[decision, draw=orange] (dx5) at ($(dx6) + (0, -2)$) {$\neg x_5$@3};
+	\node[decision, draw=orange!80] (dx5) at ($(dx6) + (0, -2)$) {$\neg x_5$@3};
 	
 	\node[propagation, draw=orange, line width=0.5mm] (px4) at ($(dx6) + (4, -1)$) {$x_4$@3};
 	\node[propagation] (px3) at ($(dx5) + (12, 0)$) {$\neg x_3$@3};
@@ -15,8 +15,8 @@
 	\node[propagation] (px33) at ($(dx5) + (12, 4)$) {$x_3$@3};
 
 
-	\node[font=\bfseries] (reason) at (2,-6) {Reason Side};
-	\node[font=\bfseries] (reason) at (9,-6) {Conflict Side};
+	\node[font=\bfseries] (reason) at (2,-6) {\textcolor{orange}{Reason Side}};
+	\node[font=\bfseries] (reason) at (9,-6) {\textcolor{orange}{Conflict Side}};
 
 	\path[->, draw, thick] (dx6) -- (px4) node [midway, fill=white] {$\omega_2$};
 	\path[->, draw, thick] (dx5) -- (px4) node [midway, fill=white] {$\omega_2$};
@@ -26,8 +26,12 @@
 	
 	\path[->, draw, thick] (dx1) -- (px33) node [midway, fill=white] {$\omega_1$};
 	\path[->, draw, thick] (px2) -- (px33) node [midway, fill=white] {$\omega_1$};
-7	\path[<->, draw, line width=1mm, color=blue!60] (px3) -- (px33);
-	\path[line width=0.5mm, draw=orange] ($(px4.east) + (0.5, -3)$) -- ($(px4.east) + (0.5, 4)$);
+	\path[<->, draw, line width=1mm, color=blue!60] (px3) -- (px33);
+	\path[line width=0.5mm, draw=orange] ($(px4.east) + (0.5, -2)$) -- ($(px4.east) + (0.5, 4)$)  
+			   node [fill=white] {\textcolor{orange}{Cut 1}};
+	
+	\path[line width=0.5mm, draw=orange!60] ($(px4.east) + (-3.5, -2)$) -- ($(px4.east) + (-3.5, 4)$)
+			   node [fill=white] {\textcolor{orange!70}{Cut 2}};
 	
 	% Legend
 	
@@ -47,7 +51,7 @@
 	\node[propagation, draw=orange, line width=0.5mm, scale=0.3] (le) at (10, -7) {};
 	\node[align=left, text width=2.2cm] at (11.5, -7) {UIP};
 	
-	\node[scale=1.5] (ld) at (10, -7.7) {\textcolor{orange}{\textendash}};
+	\node[scale=2] (ld) at (10, -7.7) {\textcolor{orange}{\textendash}};
 	\node[align=left, text width=2.2cm] at (11.5, -7.7) {Cut};
 	\path[draw] (-1, -8.2) -- (13, -8.2);
 \end{tikzpicture}
