--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -232,11 +232,14 @@ literal must be true without any decision.
  
 
 \subsection{Heuristics}
+This sections gives an overview of different heuristics present in modern SAT solvers.
+In particular 
 
 \textbf{Decision heuristics}. Variable used to divide problems have a huge impact on the 
 overall solving time by the solver. Decision variable may impact the number of propagation and so the depth of the search tree  As propagated one can be seen as \emph{deduction} and the 
 
 
+\textbf{Restart}
 
 
 \hakan{Peut être mettre les heuristiques dans des paragraphes}
