--- a/main.bib
+++ b/main.bib
@@ -79,6 +79,78 @@
 	organization={Springer}
 }
 
+% Restart
+@inproceedings{huang2007effect,
+	title={The Effect of Restarts on the Efficiency of Clause Learning.},
+	author={Huang, Jinbo and others},
+	booktitle={IJCAI},
+	volume={7},
+	pages={2318--2323},
+	year={2007}
+}
+
+@inproceedings{gomes1997heavy,
+	title={Heavy-tailed distributions in combinatorial search},
+	author={Gomes, Carla P and Selman, Bart and Crato, Nuno},
+	booktitle={International Conference on Principles and Practice of Constraint Programming},
+	pages={121--135},
+	year={1997},
+	organization={Springer}
+}
+
+
+% == Simplification
+
+% SAtelite
+@inproceedings{een2005effective,
+	title={Effective preprocessing in SAT through variable and clause elimination},
+	author={E{\'e}n, Niklas and Biere, Armin},
+	booktitle={International conference on theory and applications of satisfiability testing},
+	pages={61--75},
+	year={2005},
+	organization={Springer}
+}
+
+% Gaussian Elimination
+@inproceedings{soos2010enhanced,
+	title={Enhanced Gaussian Elimination in DPLL-based SAT Solvers.},
+	author={Soos, Mate},
+	booktitle={POS@ SAT},
+	pages={2--14},
+	year={2010}
+}
+
+%communities
+@inproceedings{ansotegui2015using,
+	title={Using community structure to detect relevant learnt clauses},
+	author={Ans{\'o}tegui, Carlos and Gir{\'a}ldez-Cru, Jes{\'u}s and Levy, Jordi and Simon, Laurent},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={238--254},
+	year={2015},
+	organization={Springer}
+}
+
+% Parallel
+
+@inproceedings{le2017painless,
+	title={PaInleSS: a framework for parallel SAT solving},
+	author={Le Frioux, Ludovic and Baarir, Souheib and Sopena, Julien and Kordon, Fabrice},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={233--250},
+	year={2017},
+	organization={Springer}
+}
+
+@inproceedings{le2019modular,
+	title={Modular and Efficient Divide-and-Conquer SAT Solver on Top of the Painless Framework},
+	author={Le Frioux, Ludovic and Baarir, Souheib and Sopena, Julien and Kordon, Fabrice},
+	booktitle={International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+	pages={135--151},
+	year={2019},
+	organization={Springer}
+}
+
+
 % == 
 @book{rossi2006handbook,
 	title={Handbook of constraint programming},
